--- a/views/form.erb
+++ b/views/form.erb
@@ -1,6 +1,10 @@
-<p>What is your name?</p>
+<!-- <p>What is your name?</p>
 <form action = "/" method = "post">
     <p>First name <input type = "text" name = "post[first_name]" size = "20" ></p>
     <p>Last name <input type = "text" name = "post[last_name]" size = "20" ></p>
     <input type = "submit" value = "Submit to your master!">
+</form> -->
+
+<form action = "/" method = "post">
+    
 </form>
