--- a/views/story.erb
+++ b/views/story.erb
@@ -1,11 +1,25 @@
 test = "The [noun] liked to [verb] the [adjective] mob boss every night."
-arr = ["douchebag", "jump", "poopy"]
+arr = ["nerd", "poke", "poopy"]
 
 test = test.to_a
 
-test.each do |x|
+@noun_count = 0
+@verb_count = 0
+@adj_count = 0
 
+test.each do |x|
+    if x = "[noun]"
+        @noun_count += 1
+    end
+    if x = "[verb]"
+        @verb_count += 1
+    end
+    if x = "[adjective]"
+        @adj_count += 1
+    end
 end
+
+
 
 test = test.sub('[noun]', arr[0])
 test = test.sub('[verb]', arr[1])
